Fixed the photoshop images. Fixed the Image src attributes in HTML. Edited the colors and fonts of the header and p elements. And added some space to even out the contet in CSS. Edited the flex cards to be more closer and taking up space to fill in. The featured landmark section and background page color contrasts better with the text color change.

--- a/style.css
+++ b/style.css
@@ -1,88 +1,126 @@
-html{
-/*   set the following properties: 
+html {
+  /*   set the following properties: 
   font-size - this will be the base font size for the site
   font-family - this will be the base font-family for the site
   line-height - base line height, generally should be in the range 1.5-1.8 
   color- primary text color for the site
   background-color - primary background color for the site */
-font-size: 20px;
-font-family: josefin sans, sans-serif;
-line-height: 1.6;
-color: #f6f3f3;
-background-color: #3e71f4;
-padding: 1rem;
-margin: 0;
-text-align: center;
+  font-size: 20px;
+  font-family: josefin sans, sans-serif;
+  line-height: 1.8;
+  color: #f6f3f3;
+  background-color: #574AFF;
+  padding: 2rem;
+  margin: 0;
+  text-align: center;
+  word-spacing: 5px;
 }
 
 /* basic responsive image css */
-img, video{
+img,
+video {
   max-width: 100%;
   height: auto;
 }
 
-figure{ 
-  margin: 0;}
+figure {
+  margin: 0;
+  position: relative;
+  align-items: center;
+}
 
-.featured-landmark{
+.featured-landmark {
   display: block;
   margin: 0 auto;
-  background-color: #44DC4D;
-  padding: 10px;
+  background-color: #CC1F70;
+  padding: 20px;
   align-content: center;
+  font-style: italic;
+  border-radius: 20px;
 }
 
-.site-title{
-  font-size: 30px;
+.site-title {
+  font-size: 40px;
   padding: 10px;
+  color: #B2FFB0;
+  font-family: 'Times New Roman', Times, serif;
+  margin: 15px;
 }
 
-.landmarks-grid{
+.landmarks-grid {
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  padding: 1rem;
+  padding: 10px;
   margin: 0 auto;
 }
 
-.landmark{
+.landmark {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   border: 2px solid #e6e6e6;
-  background-color: lightgoldenrodyellow;
+  background-color: #FFF7CA;
   border-radius: 15px;
   overflow: hidden;
   align-items: center;
   font-size: 20px;
   flex-grow: 1;
-  padding: 0 1rem;
 }
 
-h3{
-  color: brown;
+p{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 25px;
+  text-align: center;
+  padding: 10px;
+  margin: 15px;
+}
+
+h1{
+  color: #B2FFB0;
+  text-transform: uppercase;
+  font-size: 50px;
+  margin: auto;
+  padding: 0 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+  color: #FFF57E;
+  text-transform: uppercase;
+  font-size: 40px;
+  margin: auto;
+  padding: 0 1rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h3 {
+  color: #9737FF;
   text-transform: uppercase;
   font-size: 20px;
   margin: auto;
+  padding: 0 1rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  background-color: #DFFFFF;
 }
 
-a:link{
-  font-size: 20px;
-  font-family: wendy one, sans-serif;
-  display: inline-block;
-  background: green;
-  color: white;
-  padding: 10px 15px;
-  text-decoration: none;
+a:link {
+  position: center;
+  color: #FF6600;
+  background: white;
+  padding: 0px;
+  border-radius: 0px;
+  text-transform: uppercase;
+  font-size: .8rem;
   margin: auto;
 }
 
-a:hover{
+a:hover {
   color: #44DC4D;
   text-decoration: underline;
 }
 
-a:visited{
+a:visited {
   color: #080808;
 }
 
@@ -94,26 +132,28 @@ Responsive Video
 ----------------------------*/
 
 .videoWrapper {
-	position: relative;
-	padding-top: 25px;
-	height: 0;
-  clear:both;
+  position: relative;
+  padding-top: 25px;
+  height: 0;
+  clear: both;
 }
 
 /* 16:9 aspect ratio wrapper */
-.videoWrapper.ratio-16-9{
-    padding-bottom: 56.25%; /* 9 ÷ 16 = .5625 which is 56.25% */
+.videoWrapper.ratio-16-9 {
+  padding-bottom: 56.25%;
+  /* 9 ÷ 16 = .5625 which is 56.25% */
 }
 
 /* 4:3 aspect ratio wrapper */
-.videoWrapper.ratio-4-3{
-    padding-bottom: 75%; /* 3 ÷ 4 = .75 which is 75% */
+.videoWrapper.ratio-4-3 {
+  padding-bottom: 75%;
+  /* 3 ÷ 4 = .75 which is 75% */
 }
 
 .videoWrapper iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
